--- a/src/styles.css
+++ b/src/styles.css
@@ -2,4 +2,13 @@
 @tailwind components;
 @tailwind utilities;
 
+h1,h2,h3,h4{
+@apply text-primary-light-green text-xl font-bold mb-8;
 
+}
+section{
+    @apply text-center mb-12;
+}
+.skills-svg{
+    @apply p-3 rounded-xl shadow-2xl;
+}
