--- a/public/styles.css
+++ b/public/styles.css
@@ -511,6 +511,18 @@ video {
   --tw-backdrop-sepia:  ;
 }
 
+.fixed {
+  position: fixed;
+}
+
+.bottom-1\/2 {
+  bottom: 50%;
+}
+
+.right-1 {
+  right: 0.25rem;
+}
+
 .mx-8 {
   margin-left: 2rem;
   margin-right: 2rem;
@@ -589,6 +601,10 @@ video {
 
 .gap-7 {
   gap: 1.75rem;
+}
+
+.gap-4 {
+  gap: 1rem;
 }
 
 .rounded-xl {
@@ -733,6 +749,11 @@ section {
 
 .project-card img {
   padding: 2rem;
+}
+
+.social-svg {
+  height: 2rem;
+  width: 2rem;
 }
 
 @media (min-width: 768px) {
