--- a/public/styles.css
+++ b/public/styles.css
@@ -623,8 +623,12 @@ video {
   gap: 1.75rem;
 }
 
-.gap-4 {
-  gap: 1rem;
+.gap-12 {
+  gap: 3rem;
+}
+
+.gap-5 {
+  gap: 1.25rem;
 }
 
 .rounded-xl {
@@ -640,13 +644,66 @@ video {
   background-color: hsl(185 96% 19% / var(--tw-bg-opacity));
 }
 
+.bg-bg-header {
+  background-image: url('/assestsimage_2d751ad1-8728-4382-80be-5b26d66cb3b920220613_192526.jpg');
+}
+
+.bg-\[url\(\)\] {
+  background-image: url();
+}
+
+.bg-\[url\(\'\'\'\'\)\] {
+  background-image: url('''');
+}
+
+.bg-\[url\(\'\'\)\] {
+  background-image: url('');
+}
+
+.bg-\[url\(\'assests\\image_2d751ad1-8728-4382-80be-5b26d66cb3b920220613_192526\.jpg\'\)\] {
+  background-image: url('assests\image_2d751ad1-8728-4382-80be-5b26d66cb3b920220613_192526.jpg');
+}
+
+.bg-\[url\(\'\/assests\\image_2d751ad1-8728-4382-80be-5b26d66cb3b920220613_192526\.jpg\'\)\] {
+  background-image: url('/assests\image_2d751ad1-8728-4382-80be-5b26d66cb3b920220613_192526.jpg');
+}
+
+.bg-\[url\(\'\/assests\/image_2d751ad1-8728-4382-80be-5b26d66cb3b920220613_192526\.jpg\'\)\] {
+  background-image: url('/assests/image_2d751ad1-8728-4382-80be-5b26d66cb3b920220613_192526.jpg');
+}
+
+.bg-contain {
+  background-size: contain;
+}
+
+.bg-cover {
+  background-size: cover;
+}
+
+.bg-auto {
+  background-size: auto;
+}
+
+.bg-center {
+  background-position: center;
+}
+
+.bg-no-repeat {
+  background-repeat: no-repeat;
+}
+
+.object-fill {
+  -o-object-fit: fill;
+     object-fit: fill;
+}
+
 .p-6 {
   padding: 1.5rem;
 }
 
-.py-14 {
-  padding-top: 3.5rem;
-  padding-bottom: 3.5rem;
+.py-10 {
+  padding-top: 2.5rem;
+  padding-bottom: 2.5rem;
 }
 
 .px-6 {
@@ -687,6 +744,11 @@ video {
 
 .text-start {
   text-align: start;
+}
+
+.text-2xl {
+  font-size: 1.5rem;
+  line-height: 2rem;
 }
 
 .text-xl {
@@ -730,6 +792,14 @@ h1, h2, h3, h4 {
   font-weight: 700;
   --tw-text-opacity: 1;
   color: hsl(145 62% 42% / var(--tw-text-opacity));
+}
+
+@media (min-width: 768px) {
+  h1, h2, h3, h4 {
+    font-size: 1.875rem;
+    line-height: 2.25rem;
+    font-weight: 600;
+  }
 }
 
 section {
@@ -777,7 +847,55 @@ section {
 }
 
 @media (min-width: 768px) {
-  .md\:contents {
-    display: contents;
+  .md\:mx-32 {
+    margin-left: 8rem;
+    margin-right: 8rem;
+  }
+
+  .md\:mx-auto {
+    margin-left: auto;
+    margin-right: auto;
+  }
+
+  .md\:mr-32 {
+    margin-right: 8rem;
+  }
+
+  .md\:flex {
+    display: flex;
+  }
+
+  .md\:hidden {
+    display: none;
+  }
+
+  .md\:h-12 {
+    height: 3rem;
+  }
+
+  .md\:grid-cols-3 {
+    grid-template-columns: repeat(3, minmax(0, 1fr));
+  }
+
+  .md\:justify-center {
+    justify-content: center;
+  }
+
+  .md\:gap-6 {
+    gap: 1.5rem;
+  }
+
+  .md\:gap-x-12 {
+    -moz-column-gap: 3rem;
+         column-gap: 3rem;
+  }
+
+  .md\:align-middle {
+    vertical-align: middle;
+  }
+
+  .md\:text-3xl {
+    font-size: 1.875rem;
+    line-height: 2.25rem;
   }
 }
