--- a/public/styles.css
+++ b/public/styles.css
@@ -515,6 +515,19 @@ video {
   position: fixed;
 }
 
+.sticky {
+  position: -webkit-sticky;
+  position: sticky;
+}
+
+.top-0 {
+  top: 0px;
+}
+
+.left-0 {
+  left: 0px;
+}
+
 .bottom-1\/2 {
   bottom: 50%;
 }
@@ -529,6 +542,10 @@ video {
 
 .right-4 {
   right: 1rem;
+}
+
+.z-10 {
+  z-index: 10;
 }
 
 .mx-8 {
@@ -557,6 +574,14 @@ video {
 
 .mb-4 {
   margin-bottom: 1rem;
+}
+
+.mb-5 {
+  margin-bottom: 1.25rem;
+}
+
+.mb-2 {
+  margin-bottom: 0.5rem;
 }
 
 .mt-2 {
@@ -639,62 +664,19 @@ video {
   border-radius: 0.375rem;
 }
 
+.bg-gray-200 {
+  --tw-bg-opacity: 1;
+  background-color: rgb(229 231 235 / var(--tw-bg-opacity));
+}
+
 .bg-primary-dark-green {
   --tw-bg-opacity: 1;
   background-color: hsl(185 96% 19% / var(--tw-bg-opacity));
 }
 
-.bg-bg-header {
-  background-image: url('/assestsimage_2d751ad1-8728-4382-80be-5b26d66cb3b920220613_192526.jpg');
-}
-
-.bg-\[url\(\)\] {
-  background-image: url();
-}
-
-.bg-\[url\(\'\'\'\'\)\] {
-  background-image: url('''');
-}
-
-.bg-\[url\(\'\'\)\] {
-  background-image: url('');
-}
-
-.bg-\[url\(\'assests\\image_2d751ad1-8728-4382-80be-5b26d66cb3b920220613_192526\.jpg\'\)\] {
-  background-image: url('assests\image_2d751ad1-8728-4382-80be-5b26d66cb3b920220613_192526.jpg');
-}
-
-.bg-\[url\(\'\/assests\\image_2d751ad1-8728-4382-80be-5b26d66cb3b920220613_192526\.jpg\'\)\] {
-  background-image: url('/assests\image_2d751ad1-8728-4382-80be-5b26d66cb3b920220613_192526.jpg');
-}
-
-.bg-\[url\(\'\/assests\/image_2d751ad1-8728-4382-80be-5b26d66cb3b920220613_192526\.jpg\'\)\] {
-  background-image: url('/assests/image_2d751ad1-8728-4382-80be-5b26d66cb3b920220613_192526.jpg');
-}
-
-.bg-contain {
-  background-size: contain;
-}
-
-.bg-cover {
-  background-size: cover;
-}
-
-.bg-auto {
-  background-size: auto;
-}
-
-.bg-center {
-  background-position: center;
-}
-
-.bg-no-repeat {
-  background-repeat: no-repeat;
-}
-
-.object-fill {
-  -o-object-fit: fill;
-     object-fit: fill;
+.bg-neutral-white {
+  --tw-bg-opacity: 1;
+  background-color: hsl(160 5% 78% / var(--tw-bg-opacity));
 }
 
 .p-6 {
@@ -726,6 +708,16 @@ video {
   padding-bottom: 1rem;
 }
 
+.px-8 {
+  padding-left: 2rem;
+  padding-right: 2rem;
+}
+
+.py-7 {
+  padding-top: 1.75rem;
+  padding-bottom: 1.75rem;
+}
+
 .pb-6 {
   padding-bottom: 1.5rem;
 }
@@ -746,6 +738,10 @@ video {
   text-align: start;
 }
 
+.align-middle {
+  vertical-align: middle;
+}
+
 .text-2xl {
   font-size: 1.5rem;
   line-height: 2rem;
@@ -753,6 +749,11 @@ video {
 
 .text-xl {
   font-size: 1.25rem;
+  line-height: 1.75rem;
+}
+
+.text-lg {
+  font-size: 1.125rem;
   line-height: 1.75rem;
 }
 
@@ -779,6 +780,16 @@ video {
   color: hsl(145 62% 42% / var(--tw-text-opacity));
 }
 
+.text-neutral-light-blue {
+  --tw-text-opacity: 1;
+  color: hsl(217 92% 42% / var(--tw-text-opacity));
+}
+
+.text-neutral-white {
+  --tw-text-opacity: 1;
+  color: hsl(160 5% 78% / var(--tw-text-opacity));
+}
+
 .shadow-2xl {
   --tw-shadow: 0 25px 50px -12px rgb(0 0 0 / 0.25);
   --tw-shadow-colored: 0 25px 50px -12px var(--tw-shadow-color);
@@ -791,7 +802,7 @@ h1, h2, h3, h4 {
   line-height: 1.75rem;
   font-weight: 700;
   --tw-text-opacity: 1;
-  color: hsl(145 62% 42% / var(--tw-text-opacity));
+  color: hsl(185 96% 19% / var(--tw-text-opacity));
 }
 
 @media (min-width: 768px) {
@@ -852,6 +863,11 @@ section {
     margin-right: 8rem;
   }
 
+  .md\:mx-10 {
+    margin-left: 2.5rem;
+    margin-right: 2.5rem;
+  }
+
   .md\:mx-auto {
     margin-left: auto;
     margin-right: auto;
@@ -888,6 +904,14 @@ section {
   .md\:gap-x-12 {
     -moz-column-gap: 3rem;
          column-gap: 3rem;
+  }
+
+  .md\:pr-32 {
+    padding-right: 8rem;
+  }
+
+  .md\:text-left {
+    text-align: left;
   }
 
   .md\:align-middle {
