--- a/src/styles.css
+++ b/src/styles.css
@@ -2,9 +2,11 @@
 @tailwind components;
 @tailwind utilities;
 
-h1,h2,h3,h4{
-@apply text-primary-dark-green text-xl font-bold md:font-semibold mb-8 md:text-3xl scroll-mt-20;
-
+.heading{
+@apply text-primary-dark-green text-xl font-bold md:font-semibold mb-8 md:text-3xl scroll-mt-24 hover:underline hover:underline-offset-2 hover:scale-105;
+}
+.nav-link{
+    @apply hover:underline hover:underline-offset-2 hover:scale-105;
 }
 section{
     @apply text-center mb-12;
@@ -12,18 +14,27 @@ section{
 .skills-svg{
     @apply p-3 rounded-xl shadow-2xl;
 }
+.project-heading{
+    @apply text-primary-dark-green font-semibold text-xl;
+}
+.live-preview-link{
+    @apply block text-primary-light-blue  text-xl py-1 hover:underline underline-offset-2 duration-500;
+}
+.github-link{
+    @apply  hover:underline underline-offset-2;
+}
 .input-field{
-    @apply border-2 border-solid border-neutral-dark-green w-full rounded-md ;
+    @apply border-2 border-solid border-neutral-dark-green  w-full rounded-md ;
 }
 .field-label{
-    @apply text-neutral-dark-green;
+    @apply text-neutral-dark-green  after:content-['*'];
 }
 .project-card{
-    @apply rounded-xl shadow-2xl mb-4 ;
+    @apply rounded-xl shadow-2xl mb-4 py-2;
 }
 .project-card img{
-    @apply p-8;
+    @apply px-6 pb-1;
 }
 .social-svg{
-    @apply w-8 h-8;
+    @apply w-8 h-8 hover:translate-x-1 ease-out  duration-300 hover:scale-110;
 }
