--- a/public/styles.css
+++ b/public/styles.css
@@ -532,8 +532,8 @@ video {
   bottom: 50%;
 }
 
-.right-1 {
-  right: 0.25rem;
+.right-\[2\%\] {
+  right: 2%;
 }
 
 .bottom-4 {
@@ -952,6 +952,36 @@ section {
   transform: translate(var(--tw-translate-x), var(--tw-translate-y)) rotate(var(--tw-rotate)) skewX(var(--tw-skew-x)) skewY(var(--tw-skew-y)) scaleX(var(--tw-scale-x)) scaleY(var(--tw-scale-y));
 }
 
+.before\:content-\[\.\.\/assests\\link\.svg\]::before {
+  --tw-content: ../assests\link.svg;
+  content: var(--tw-content);
+}
+
+.before\:content-\[\'\.\.\/assests\\link\.svg\'\]::before {
+  --tw-content: '../assests\link.svg';
+  content: var(--tw-content);
+}
+
+.before\:content-\[\.\/assests\\link\.svg\]::before {
+  --tw-content: ./assests\link.svg;
+  content: var(--tw-content);
+}
+
+.before\:content-\[\/assests\\link\.svg\]::before {
+  --tw-content: /assests\link.svg;
+  content: var(--tw-content);
+}
+
+.before\:content-\[assests\\link\.svg\]::before {
+  --tw-content: assests\link.svg;
+  content: var(--tw-content);
+}
+
+.before\:content-\[\.assests\\link\.svg\]::before {
+  --tw-content: .assests\link.svg;
+  content: var(--tw-content);
+}
+
 .hover\:animate-none:hover {
   -webkit-animation: none;
           animation: none;
@@ -973,10 +1003,6 @@ section {
 }
 
 @media (min-width: 768px) {
-  .md\:right-4 {
-    right: 1rem;
-  }
-
   .md\:mx-48 {
     margin-left: 12rem;
     margin-right: 12rem;
