--- a/public/styles.css
+++ b/public/styles.css
@@ -515,6 +515,10 @@ video {
   position: fixed;
 }
 
+.absolute {
+  position: absolute;
+}
+
 .sticky {
   position: -webkit-sticky;
   position: sticky;
@@ -526,6 +530,14 @@ video {
 
 .left-0 {
   left: 0px;
+}
+
+.top-4 {
+  top: 1rem;
+}
+
+.right-4 {
+  right: 1rem;
 }
 
 .bottom-1\/2 {
@@ -540,8 +552,8 @@ video {
   bottom: 1rem;
 }
 
-.right-4 {
-  right: 1rem;
+.z-50 {
+  z-index: 50;
 }
 
 .mx-10 {
@@ -557,6 +569,10 @@ video {
 .mx-4 {
   margin-left: 1rem;
   margin-right: 1rem;
+}
+
+.mb-10 {
+  margin-bottom: 2.5rem;
 }
 
 .mb-4 {
@@ -591,6 +607,10 @@ video {
   display: grid;
 }
 
+.aspect-square {
+  aspect-ratio: 1 / 1;
+}
+
 .h-9 {
   height: 2.25rem;
 }
@@ -599,12 +619,21 @@ video {
   height: 3rem;
 }
 
+.w-8 {
+  width: 2rem;
+}
+
 .w-full {
   width: 100%;
 }
 
 .w-12 {
   width: 3rem;
+}
+
+.-translate-x-full {
+  --tw-translate-x: -100%;
+  transform: translate(var(--tw-translate-x), var(--tw-translate-y)) rotate(var(--tw-rotate)) skewX(var(--tw-skew-x)) skewY(var(--tw-skew-y)) scaleX(var(--tw-scale-x)) scaleY(var(--tw-scale-y));
 }
 
 @-webkit-keyframes bounce {
@@ -680,6 +709,10 @@ video {
   gap: 1.25rem;
 }
 
+.overflow-x-hidden {
+  overflow-x: hidden;
+}
+
 .rounded-xl {
   border-radius: 0.75rem;
 }
@@ -703,6 +736,18 @@ video {
   background-color: hsl(185 96% 19% / var(--tw-bg-opacity));
 }
 
+.bg-\[url\(\'\.\.\/assests\/hamburger\.svg\'\)\] {
+  background-image: url('../assests/hamburger.svg');
+}
+
+.bg-cover {
+  background-size: cover;
+}
+
+.bg-no-repeat {
+  background-repeat: no-repeat;
+}
+
 .p-6 {
   padding: 1.5rem;
 }
@@ -710,6 +755,11 @@ video {
 .py-7 {
   padding-top: 1.75rem;
   padding-bottom: 1.75rem;
+}
+
+.py-2 {
+  padding-top: 0.5rem;
+  padding-bottom: 0.5rem;
 }
 
 .px-6 {
@@ -851,6 +901,11 @@ video {
   transition-duration: 300ms;
 }
 
+[data-visible="true"] {
+  --tw-translate-x: 0px;
+  transform: translate(var(--tw-translate-x), var(--tw-translate-y)) rotate(var(--tw-rotate)) skewX(var(--tw-skew-x)) skewY(var(--tw-skew-y)) scaleX(var(--tw-scale-x)) scaleY(var(--tw-scale-y));
+}
+
 section {
   margin-bottom: 3rem;
   text-align: center;
@@ -952,36 +1007,6 @@ section {
   transform: translate(var(--tw-translate-x), var(--tw-translate-y)) rotate(var(--tw-rotate)) skewX(var(--tw-skew-x)) skewY(var(--tw-skew-y)) scaleX(var(--tw-scale-x)) scaleY(var(--tw-scale-y));
 }
 
-.before\:content-\[\.\.\/assests\\link\.svg\]::before {
-  --tw-content: ../assests\link.svg;
-  content: var(--tw-content);
-}
-
-.before\:content-\[\'\.\.\/assests\\link\.svg\'\]::before {
-  --tw-content: '../assests\link.svg';
-  content: var(--tw-content);
-}
-
-.before\:content-\[\.\/assests\\link\.svg\]::before {
-  --tw-content: ./assests\link.svg;
-  content: var(--tw-content);
-}
-
-.before\:content-\[\/assests\\link\.svg\]::before {
-  --tw-content: /assests\link.svg;
-  content: var(--tw-content);
-}
-
-.before\:content-\[assests\\link\.svg\]::before {
-  --tw-content: assests\link.svg;
-  content: var(--tw-content);
-}
-
-.before\:content-\[\.assests\\link\.svg\]::before {
-  --tw-content: .assests\link.svg;
-  content: var(--tw-content);
-}
-
 .hover\:animate-none:hover {
   -webkit-animation: none;
           animation: none;
@@ -1049,6 +1074,11 @@ section {
 
   .md\:w-2\/4 {
     width: 50%;
+  }
+
+  .md\:translate-x-0 {
+    --tw-translate-x: 0px;
+    transform: translate(var(--tw-translate-x), var(--tw-translate-y)) rotate(var(--tw-rotate)) skewX(var(--tw-skew-x)) skewY(var(--tw-skew-y)) scaleX(var(--tw-scale-x)) scaleY(var(--tw-scale-y));
   }
 
   .md\:grid-cols-3 {
