--- a/src/styles.css
+++ b/src/styles.css
@@ -8,6 +8,7 @@
 .nav-link{
     @apply hover:underline hover:underline-offset-2 hover:scale-105 hover:duration-300;
 }
+/* navigation list data-visible true  */
 [data-visible="true"]{
     @apply translate-x-0;
 }
