--- a/public/styles.css
+++ b/public/styles.css
@@ -607,6 +607,10 @@ video {
   display: grid;
 }
 
+.hidden {
+  display: none;
+}
+
 .aspect-square {
   aspect-ratio: 1 / 1;
 }
@@ -629,11 +633,6 @@ video {
 
 .w-12 {
   width: 3rem;
-}
-
-.-translate-x-full {
-  --tw-translate-x: -100%;
-  transform: translate(var(--tw-translate-x), var(--tw-translate-y)) rotate(var(--tw-rotate)) skewX(var(--tw-skew-x)) skewY(var(--tw-skew-y)) scaleX(var(--tw-scale-x)) scaleY(var(--tw-scale-y));
 }
 
 @-webkit-keyframes bounce {
@@ -728,11 +727,6 @@ video {
 .bg-gray-200 {
   --tw-bg-opacity: 1;
   background-color: rgb(229 231 235 / var(--tw-bg-opacity));
-}
-
-.bg-neutral-white {
-  --tw-bg-opacity: 1;
-  background-color: hsl(160 5% 78% / var(--tw-bg-opacity));
 }
 
 .bg-primary-dark-green {
@@ -903,12 +897,13 @@ video {
 /* navigation list data-visible true  */
 
 [data-visible="true"] {
-  --tw-translate-x: 0px;
-  transform: translate(var(--tw-translate-x), var(--tw-translate-y)) rotate(var(--tw-rotate)) skewX(var(--tw-skew-x)) skewY(var(--tw-skew-y)) scaleX(var(--tw-scale-x)) scaleY(var(--tw-scale-y));
+  display: block;
+  transition-duration: 1000ms;
+  transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
 }
 
-.mobile-nav-toggle[aria-expanded="false"] {
-  background-image: url('../assests\icon-close.svg');
+.mobile-nav-toggle[aria-expanded="true"] {
+  background-image: url('../assests/icon-close.svg');
 }
 
 section {
@@ -1081,11 +1076,6 @@ section {
     width: 50%;
   }
 
-  .md\:translate-x-0 {
-    --tw-translate-x: 0px;
-    transform: translate(var(--tw-translate-x), var(--tw-translate-y)) rotate(var(--tw-rotate)) skewX(var(--tw-skew-x)) skewY(var(--tw-skew-y)) scaleX(var(--tw-scale-x)) scaleY(var(--tw-scale-y));
-  }
-
   .md\:grid-cols-3 {
     grid-template-columns: repeat(3, minmax(0, 1fr));
   }
@@ -1104,6 +1094,11 @@ section {
 
   .md\:gap-6 {
     gap: 1.5rem;
+  }
+
+  .md\:bg-neutral-white {
+    --tw-bg-opacity: 1;
+    background-color: hsl(160 5% 78% / var(--tw-bg-opacity));
   }
 
   .md\:py-6 {
