Add background to mobile navigation bar

--- a/public/styles.css
+++ b/public/styles.css
@@ -729,6 +729,11 @@ video {
   background-color: rgb(229 231 235 / var(--tw-bg-opacity));
 }
 
+.bg-neutral-white {
+  --tw-bg-opacity: 1;
+  background-color: hsl(160 5% 78% / var(--tw-bg-opacity));
+}
+
 .bg-primary-dark-green {
   --tw-bg-opacity: 1;
   background-color: hsl(185 96% 19% / var(--tw-bg-opacity));
@@ -804,6 +809,10 @@ video {
   padding-top: 0.5rem;
 }
 
+.text-left {
+  text-align: left;
+}
+
 .text-center {
   text-align: center;
 }
@@ -857,7 +866,7 @@ video {
 
 .heading {
   margin-bottom: 2rem;
-  scroll-margin-top: 11rem;
+  scroll-margin-top: 5rem;
   font-size: 1.25rem;
   line-height: 1.75rem;
   font-weight: 700;
@@ -1094,11 +1103,6 @@ section {
 
   .md\:gap-6 {
     gap: 1.5rem;
-  }
-
-  .md\:bg-neutral-white {
-    --tw-bg-opacity: 1;
-    background-color: hsl(160 5% 78% / var(--tw-bg-opacity));
   }
 
   .md\:py-6 {
